[gd_scene load_steps=33 format=3 uid="uid://b2ab63mqycf4b"]

[ext_resource type="Shader" uid="uid://cw0x3o7tvvdcv" path="res://13_TOOLS_UI/Map/Map_board_sh.tres" id="4_4w7uu"]
[ext_resource type="Texture2D" uid="uid://cuul1oo87fgv6" path="res://13_TOOLS_UI/Map/Map_board_isle_01.png" id="5_vqyju"]
[ext_resource type="Texture2D" uid="uid://y701g232cpu4" path="res://13_TOOLS_UI/Map/Map_board_01.png" id="6_83v2s"]
[ext_resource type="PackedScene" uid="uid://uwg2qc3svu11" path="res://05_DESK_MAP/Photo/photo_area.tscn" id="7_q3ybq"]
[ext_resource type="PackedScene" uid="uid://cx2rmplug5w4e" path="res://05_DESK_MAP/Decor/Plume_pot_prefab.tscn" id="17_5jjjt"]
[ext_resource type="Shader" uid="uid://bii47ft606xyy" path="res://05_DESK_MAP/00_SHADER/Element_base_sh.tres" id="17_udv7n"]
[ext_resource type="Texture2D" uid="uid://bf1vkenq7yets" path="res://05_DESK_MAP/Book/Base_Gradient.png" id="18_kjnxk"]
[ext_resource type="PackedScene" uid="uid://b3i04ha2iqr4l" path="res://05_DESK_MAP/Loupe/loupe_rg.tscn" id="18_pgwn6"]
[ext_resource type="PackedScene" uid="uid://dm5d272iur25u" path="res://05_DESK_MAP/Chavet/Chavet_prefab.tscn" id="19_vutls"]
[ext_resource type="PackedScene" uid="uid://bh5a7fhvftxmm" path="res://06_BOOK/Book/Book_Pages_all.tscn" id="25_bb2f2"]
[ext_resource type="Script" path="res://06_BOOK/Page_ressource/book_class.gd" id="26_2wsl6"]
[ext_resource type="Shader" uid="uid://8ll6evus625p" path="res://05_DESK_MAP/00_SHADER/Gradient_surface.tres" id="26_bw6mp"]
[ext_resource type="Script" path="res://05_DESK_MAP/open_book_board.gd" id="26_l0f88"]
[ext_resource type="Resource" uid="uid://dkhdcuflp8dv3" path="res://06_BOOK/Page_ressource/Page_01.tres" id="27_63j78"]
[ext_resource type="Resource" uid="uid://3vhuoia0jfuv" path="res://06_BOOK/Page_ressource/Page_02.tres" id="28_r82as"]
[ext_resource type="Resource" uid="uid://305t0o03tehu" path="res://06_BOOK/Page_ressource/Page_03.tres" id="29_mqmpn"]
[ext_resource type="Resource" uid="uid://cx3ih4ggo2j2x" path="res://06_BOOK/Page_ressource/Page_04.tres" id="30_ljil0"]
[ext_resource type="PackedScene" uid="uid://bn54mxsafetjv" path="res://05_DESK_MAP/Globe/globe_prefab.tscn" id="31_kcpcd"]
[ext_resource type="PackedScene" uid="uid://dkhji76icgbfk" path="res://05_DESK_MAP/Candle/Candle_prefab_02.tscn" id="37_pa00p"]
[ext_resource type="PackedScene" uid="uid://djffqqvhx1is" path="res://05_DESK_MAP/Candle/Candle_prefab_03.tscn" id="38_2cvak"]
[ext_resource type="PackedScene" uid="uid://bcegerjktkbr6" path="res://05_DESK_MAP/Candle/Candle_prefab_01.tscn" id="42_34f14"]
[ext_resource type="PackedScene" uid="uid://ypiajnwq2wfa" path="res://05_DESK_MAP/Desk/Desk_prefab.tscn" id="43_3hhej"]
[ext_resource type="PackedScene" uid="uid://c18stvbutb83o" path="res://05_DESK_MAP/Book/Book_prefab.tscn" id="44_8e65i"]

[sub_resource type="Gradient" id="Gradient_by4g0"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jeod4"]
gradient = SubResource("Gradient_by4g0")
fill_from = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_isdhd"]
render_priority = 0
shader = ExtResource("26_bw6mp")
shader_parameter/Color = Color(0.372549, 0.286275, 0.176471, 1)
shader_parameter/Dither_Opacity = 0.405
shader_parameter/Gradient_light = SubResource("GradientTexture2D_jeod4")

[sub_resource type="PlaneMesh" id="PlaneMesh_n7wwh"]
material = SubResource("ShaderMaterial_isdhd")
size = Vector2(0.795, 0.795)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ngjl"]
render_priority = 0
shader = ExtResource("4_4w7uu")
shader_parameter/Flat_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
shader_parameter/Opacity = 1.0
shader_parameter/Mask_color = Color(0.223529, 0.211765, 0.145098, 1)
shader_parameter/Line_color = Color(0.596078, 0.466667, 0.298039, 1)
shader_parameter/Isle_mask = ExtResource("5_vqyju")
shader_parameter/Line = ExtResource("6_83v2s")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cwrlt"]
points = PackedVector3Array(-0.3975, 0, -0.3975, -0.3975, 0, 0.3975, 0.3975, 0, -0.3975, 0.3975, 0, 0.3975)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jorhr"]
render_priority = 0
shader = ExtResource("17_udv7n")
shader_parameter/BaseColor = Color(0.265433, 0.165211, 0.0763168, 1)
shader_parameter/Dither_Opacity = 1.0
shader_parameter/BaseGradient = ExtResource("18_kjnxk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b3fp2"]
render_priority = 0
shader = ExtResource("17_udv7n")
shader_parameter/BaseColor = Color(0.607843, 0.529412, 0.443137, 1)
shader_parameter/Dither_Opacity = 1.0
shader_parameter/BaseGradient = ExtResource("18_kjnxk")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0n5oh"]
points = PackedVector3Array(0.4163, 0.153594, 0.508411, 0.375846, 0.228587, 0.508411, 0.378173, 0.0867274, 0.51684, 0.4163, 0.0780193, 0.508411, 0.4163, 0.153594, -0.536517, -0.403704, 0.228587, 0.508411, 0.375846, 0.228587, -0.536517, -0.403704, -0.000107635, 0.508411, 0.375846, -0.000107635, 0.508411, 0.4163, 0.0780193, -0.536517, -0.357149, 0.105554, -0.546299, -0.403704, 0.228587, -0.536517, -0.403704, -0.000107635, -0.536517, 0.375846, -0.000107635, -0.536517)

[node name="Board_scene" type="Node3D"]

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(0.482402, 0, -0.045507, 0, 0.484544, 0, 0.045507, 0, 0.482402, 0.0131115, 0.00229809, 0.0378719)

[node name="Map_border" type="MeshInstance3D" parent="Map"]
transform = Transform3D(1.87617, 1.02189e-28, -2.96131e-07, 0, 1.87617, 6.47429e-22, 2.96131e-07, -6.47429e-22, 1.87617, 0, -0.00448075, 0)
mesh = SubResource("PlaneMesh_n7wwh")
skeleton = NodePath("")

[node name="Map_texture" type="MeshInstance3D" parent="Map"]
transform = Transform3D(1.81691, 9.89614e-29, -2.86778e-07, 0, 1.81691, 6.2698e-22, 2.86778e-07, -6.2698e-22, 1.81691, 0, -0.000823252, 0)
mesh = SubResource("PlaneMesh_n7wwh")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_1ngjl")

[node name="Map" type="Area3D" parent="Map/Map_texture"]
transform = Transform3D(1, 3.15544e-30, 0, -3.15544e-30, 1, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Map_texture/Map"]
transform = Transform3D(1, -3.15544e-30, -7.45058e-09, 3.15544e-30, 1, 2.52435e-29, 7.45058e-09, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_cwrlt")

[node name="Photo_element_root" parent="Map" instance=ExtResource("7_q3ybq")]
transform = Transform3D(1.44367, 0, 0.176188, 0, 1.45439, 0, -0.176188, 0, 1.44367, -0.713143, -0.00267564, 0.173645)
visible = false

[node name="Photo_element_root2" parent="Map" instance=ExtResource("7_q3ybq")]
transform = Transform3D(1.50043, 0, 0.0175464, 0, 1.50053, 0, -0.0175464, 0, 1.50043, -0.976579, -0.00267564, 0.119787)
visible = false

[node name="Photo_element_root3" parent="Map" instance=ExtResource("7_q3ybq")]
transform = Transform3D(1.60191, 0, 0.0187332, 0, 1.60202, 0, -0.0187332, 0, 1.60191, -0.773463, -0.00267561, -0.0190705)
visible = false

[node name="Movable" type="Node3D" parent="."]

[node name="CandlePrefab02" parent="Movable" instance=ExtResource("37_pa00p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.549023, 1.19209e-07, 0.122292)

[node name="CandlePrefab03" parent="Movable" instance=ExtResource("38_2cvak")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.700456, 0.220197, 0.130032)

[node name="CandlePrefab01" parent="Movable" instance=ExtResource("42_34f14")]
transform = Transform3D(-0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 0.478593, 0.00217257, 0.0790945)

[node name="CandlePrefab04" parent="Movable" instance=ExtResource("42_34f14")]
transform = Transform3D(0.707106, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707106, -0.57211, 0.00217257, -0.0154099)

[node name="Globe_prefab" parent="Movable" instance=ExtResource("31_kcpcd")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0.566344, 0.137072, -0.0899701)

[node name="Static" type="Node3D" parent="."]

[node name="Desk_prefab" parent="Static" instance=ExtResource("43_3hhej")]
transform = Transform3D(-2.07016e-08, 0, -0.473598, 0, 0.473598, 0, 0.473598, 0, -2.07016e-08, 0, -0.711, 0)

[node name="BookPrefab" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.78314, 0, 0.621845, 0, 1, 0, -0.621845, 0, -0.78314, -0.299172, 0, -0.302032)

[node name="BookPrefab2" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, -0.310112, 0.0458647, -0.291368)

[node name="BookPrefab3" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, -0.310112, 0.0896486, -0.291368)

[node name="BookPrefab7" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(4.37114e-08, 0, 1, 0, 1, 0, -1, 0, 4.37114e-08, 0.413203, 0.00145459, -0.242087)

[node name="BookPrefab8" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0.408525, 0.0450706, -0.258576)

[node name="BookPrefab4" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, -0.712631, 0, -0.0236672)

[node name="BookPrefab21" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.966443, 0, -0.25688, 0, 1, 0, 0.25688, 0, -0.966443, -0.438853, 0, 0.329437)

[node name="BookPrefab5" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, -0.712631, 0.0458647, -0.0236672)

[node name="BookPrefab6" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, -0.712631, 0.0896486, -0.0236672)

[node name="BookPrefab9" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, 1, 0.567211, 0, -0.0789771)

[node name="BookPrefab10" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0.567211, 0.0458647, -0.0789771)

[node name="BookPrefab11" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0.567211, 0.0896486, -0.0789771)

[node name="BookPrefab13" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.707867, 0, 0.128613)

[node name="BookPrefab14" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0.707867, 0.0458647, 0.128613)

[node name="BookPrefab15" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0.707867, 0.0896486, 0.128613)

[node name="BookPrefab19" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0.707867, 0.1343, 0.128613)

[node name="BookPrefab20" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0.707867, 0.178084, 0.128613)

[node name="BookPrefab16" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0.58289, 0, 0.299629)

[node name="BookPrefab17" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0.58289, 0.0458647, 0.299629)

[node name="BookPrefab18" parent="Static" instance=ExtResource("44_8e65i")]
transform = Transform3D(1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, 0.58289, 0.0896486, 0.299629)

[node name="PlumePotPrefab" parent="Static" instance=ExtResource("17_5jjjt")]
transform = Transform3D(0.337084, 0, -0.337084, 0, 0.476709, 0, 0.337084, 0, 0.337084, -0.449759, 0.0474542, 0.376902)

[node name="Loupe_deco" parent="Static" instance=ExtResource("18_pgwn6")]
transform = Transform3D(-0.116957, 0, -0.443039, 0, 0.458216, 0, 0.443039, 0, -0.116957, -0.266367, -0.00115648, 0.377815)

[node name="ChavetPrefab" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00346491, 0.00200001, 0.131942)

[node name="ChavetPrefab2" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(0.99458, 0, 0.103973, 0, 1, 0, -0.103973, 0, 0.99458, -0.2004, 0.002, 0.052742)

[node name="ChavetPrefab3" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(0.993371, 0, -0.114954, 0, 1, 0, 0.114954, 0, 0.993371, -0.0880953, 0.002, 0.235405)

[node name="ChavetPrefab4" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.213817, 0.002, -0.0205161)

[node name="ChavetPrefab5" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(0.974185, 0, -0.22575, 0, 1, 0, 0.22575, 0, 0.974185, -0.0946041, 0.002, -0.241573)

[node name="ChavetPrefab6" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(0.95051, 0, -0.310693, 0, 1, 0, 0.310693, 0, 0.95051, 0.0423065, 0.002, 0.035328)

[node name="ChavetPrefab7" parent="." instance=ExtResource("19_vutls")]
transform = Transform3D(0.979607, 0, -0.200924, 0, 1, 0, 0.200924, 0, 0.979607, 0.194513, 0.002, -0.220976)

[node name="BookPrefab12" parent="." instance=ExtResource("44_8e65i")]
transform = Transform3D(-0.714813, 0, 0.32137, 0, 0.783733, 0, -0.32137, 0, -0.714813, 0.206323, -2.98023e-08, 0.335885)

[node name="Book_01" parent="BookPrefab12/Book" index="0"]
transform = Transform3D(0.259243, 0, 0.0364204, 0, 0.261789, 0, -0.0364204, 0, 0.259243, 0, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_jorhr")
surface_material_override/1 = SubResource("ShaderMaterial_b3fp2")

[node name="Book_area" type="Area3D" parent="BookPrefab12/Book/Book_01" index="0"]
collision_layer = 2
collision_mask = 2

[node name="Book" type="Node" parent="BookPrefab12/Book/Book_01/Book_area"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BookPrefab12/Book/Book_01/Book_area"]
transform = Transform3D(1.12819, 0, 0, 0, 1.12819, 0, 0, 0, 1.12819, -0.00357127, 1.62489e-07, 0.00028801)
shape = SubResource("ConvexPolygonShape3D_0n5oh")

[node name="BOOK" parent="." instance=ExtResource("25_bb2f2")]
transform = Transform3D(-0.0136706, -0.000429615, -0.0684918, -0.00219385, 0.0698096, -1.37879e-10, 0.068458, 0.00215138, -0.0136773, 0.188323, 0.0115134, 0.361104)
visible = false
list_of_page = Array[ExtResource("26_2wsl6")]([ExtResource("27_63j78"), ExtResource("28_r82as"), ExtResource("29_mqmpn"), ExtResource("30_ljil0")])

[node name="Open_book_board" type="Node" parent="."]
script = ExtResource("26_l0f88")

[editable path="BookPrefab12"]
[editable path="BookPrefab12/Book"]
